moved Readme file to correct folder, fixed scrolling with x overflow and rounded corners, and changed page title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 html{
   scroll-behavior: smooth;
+  
 }
 body {
   height: 100%;
   font-family: 'Pacifico', cursive;
+  overflow-x: hidden;
+  border-style: none;
 }
 /*-----------------------------------------------------------nav bar section */
 .navbar {
